--- a/k8s/bases/apps/homepage/config-map.yaml
+++ b/k8s/bases/apps/homepage/config-map.yaml
@@ -2,11 +2,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: config
+  name: homepage
   namespace: homepage
 data:
-  kubernetes.yaml: |
-    mode: cluster
   settings.yaml: |
     title: Platform
     favicon: https://devantler.tech/assets/images/author.png
@@ -23,6 +21,8 @@ data:
       Storage:
       Monitoring:
       Analytics:
+  kubernetes.yaml: |
+    mode: cluster
   widgets.yaml: |
     - logo:
         icon: https://devantler.tech/assets/images/author.png
@@ -97,3 +97,6 @@ data:
         - NuGet:
             - icon: si-nuget-#1088d6
               href: https://www.nuget.org
+  docker.yaml: ""
+  custom.css: ""
+  custom.js: ""
