--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -56,7 +56,7 @@ jobs:
 
   deploy-prod:
     if: startsWith(github.ref, 'refs/tags/v')
-    needs: deploy-dev
+    needs: bootstrap-prod
     uses: devantler-tech/github-actions/.github/workflows/reusable-workflow-cd-gitops-deploy.yaml@d69de4b313f789d5aff0bf42614da212fc5362e2 # v1.8.4
     with:
       DEPLOYMENT_ENV: prod
