--- a/.github/workflows/cd-deploy.yaml
+++ b/.github/workflows/cd-deploy.yaml
@@ -10,7 +10,7 @@ permissions:
   packages: write
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
+  group: ${{ github.workflow }}
   cancel-in-progress: false
 
 jobs:
