--- a/k8s/bases/apps/nextcloud/helm-release.yaml
+++ b/k8s/bases/apps/nextcloud/helm-release.yaml
@@ -52,3 +52,11 @@ spec:
       #   enabled: true
     persistence:
       enabled: true
+    # Prevent occasional OOMKills (pod previously exited with code 137). Tune as needed.
+    resources:
+      requests:
+        cpu: 200m
+        memory: 512Mi
+      limits:
+        cpu: "1"
+        memory: 1Gi
