--- a/.github/workflows/cd-deploy.yaml
+++ b/.github/workflows/cd-deploy.yaml
@@ -14,7 +14,16 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
+  bootstrap-prod:
+    uses: devantler-tech/reusable-workflows/.github/workflows/cd-cluster-bootstrap.yaml@de0b28bd340347d12b863254ff29e65a556b5438 # v1.1.13
+    with:
+      DEPLOYMENT_ENV: prod
+    secrets:
+      KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
+      SOPS_AGE_KEY: ${{ secrets.SOPS_AGE_KEY }}
+
   deploy-prod:
+    needs: bootstrap-prod
     uses: devantler-tech/reusable-workflows/.github/workflows/cd-gitops-deploy.yaml@fbfd051d3029c9f8d2bb64a87a329c824241fc36 # v1.1.6
     with:
       DEPLOYMENT_ENV: prod
